# misc

./: README.md
aes/: README.md  aes.mjs  aes.test.mjs  package-lock.json  package.json
aes/public/: aes-128-dissected.html  slider.html
aes/src/: aes.js  aes.test.js
broken-website/: package-lock.json  package.json
broken-website/backend/: fly.toml  index.js  package-lock.json  package.json  stuff.json
broken-website/frontend/: package-lock.json  package.json
bunch-o-bevy-apps/: Cargo.toml
bunch-o-bevy-apps/animated-shader/: Cargo.toml
bunch-o-bevy-apps/bevy-crash-course/: .gitignore  Cargo.toml
bunch-o-bevy-apps/breakthrough/: Cargo.toml
bunch-o-bevy-apps/interactive-fractal/: Cargo.toml
casey-circle-ascii/: Cargo.toml
cave-crawl/: Cargo.toml
cave-crawl/src/: main.rs
clock/: Cargo.toml
contributions-heatmap/: README
detect-anagram-performance/: Cargo.toml
drunken-bishop/: Cargo.toml
filter-performance/: README  a.pl  a.py  a.rs  b.rs  c.rs  gen_input.py
integer-sort/: Cargo.toml
lsmt/: Cargo.toml  README  build.rs
magnifying-glass/: Cargo.toml
matrix/: Cargo.toml  README.md
nannou-animated-sine/: Cargo.toml
pixel-poking/: .gitignore  Cargo.toml
rust-collections-performance/: Cargo.toml  README.md
stars/: Cargo.toml
toy-redis/: Cargo.toml
twilight-massacre-sandbox/: index.html
twilight-massacre-training-grounds/: twilight-massacre-training-grounds.html
web-server-benchmarks/json_vs_protobuf/actix_web/: Cargo.toml  README.md
web-server-benchmarks/json_vs_protobuf/actix_web/src/: main.rs
word-chain/: Cargo.toml
(+106 files in other folders)
