[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
actix-protobuf = "0.9.0"
prost = { version = "0.11", features = ["prost-derive"] }
env_logger = "0.10.0"

[build-dependencies]
prost-build = { version = "0.11.9" }